fixed the link to the witches page in the navbar

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 					<li><a href="tinman.html">Tin Man</a></li>
 					<li><a href="lion.html">Lion</a></li>
 					<li><a href="scarecrow.html">Scarecrow</a></li>
-					<li><a href="witches.html">Witches</a></li>
+					<li><a href="witchesall.html">Witches</a></li>
 				</ul>
 			</nav>
 		</header>
