--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                             </div>
                         </div>
                         <div class="friend">
-                            <h3>Toto</h3>
+                            <h3>Toto The Dog</h3>
                             <div>
                                 <img src="images/toto.jpg" alt="Toto">
                             </div>
