--- a/index.html
+++ b/index.html
@@ -74,6 +74,12 @@
 								<img src="images/WickedWitch.jpg" alt="Wicked Witch">
 							</div>
 						</div>
+						<div class="friend">
+							<h3>Horse of a Different Color</h3>
+							<div>
+								<img src="images/Horse-of-a-diffferent-color.jpg" alt="Horse of a different Color">
+							</div>
+						</div>
 					</div>
 				</section>
 			</div>
