--- a/index.html
+++ b/index.html
@@ -61,6 +61,12 @@
 								<img src="images/tinman.jpg" alt="Tin Man">
 							</div>
 						</div>
+						<div class="friend">
+							<h3>Lollipop Guild</h3>
+							<div>
+								<img src="images/Munchkin.jpg" alt="lollipop guild">
+							</div>
+						</div>
 					</div>
 				</section>
 			</div>
