added munchkin and monkey characters

--- a/index.html
+++ b/index.html
@@ -61,6 +61,18 @@
 								<img src="images/tinman.jpg" alt="Tin Man">
 							</div>
 						</div>
+						<div class="friend">
+							<h3>Flying Monkey</h3>
+							<div>
+								<img src="images/flyingmonkey.jpg" alt="Flying Monkey">
+							</div>
+						</div>
+						<div class="friend">
+							<h3>Munchkin Mayor</h3>
+							<div>
+								<img src="images/munchkinmayor.jpg" alt="Munchkin Mayor">
+							</div>
+						</div>
 					</div>
 				</section>
 			</div>
