added the Wizard

--- a/index.html
+++ b/index.html
@@ -59,7 +59,13 @@
 							<h3>Tin Man</h3>
 							<div>
 								<img src="images/tinman.jpg" alt="Tin Man">
-							</div>
+							
+						</div>
+					</div>
+					<div class="friend">
+						<h3>Wizard</h3>
+						<div>
+							<img src="images/wizard.jpg" alt="wizard">
 						</div>
 					</div>
 				</section>
