Added the curtain as friend

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
 					<li><a href="lion.html">Lion</a></li>
 					<li><a href="scarecrow.html">Scarecrow</a></li>
 					<li><a href="witchesall.html">Witches</a></li>
+					<li><a href="curtain.html">The Curtain</a></li>
 				</ul>
 			</nav>
 		</header>
@@ -59,6 +60,12 @@
 							<h3>Tin Man</h3>
 							<div>
 								<img src="images/tinman.jpg" alt="Tin Man">
+							</div>
+						</div>
+						<div class="friend">
+							<h3>The Curtain</h3>
+							<div>
+								<img src="images/thecurtain.jpg" alt="The Curtain">
 							</div>
 						</div>
 					</div>
