--- a/index.html
+++ b/index.html
@@ -61,6 +61,13 @@
 								<img src="images/tinman.jpg" alt="Tin Man">
 							</div>
 						</div>
+						<!--Added character-->
+						<div class="friend">
+							<h3>Munchkins</h3>
+							<div>
+								<img src="images/munchkins.jpg" alt="Munchkins">
+							</div>
+						</div>
 					</div>
 				</section>
 			</div>
