added wicked witch

--- a/index.html
+++ b/index.html
@@ -61,6 +61,14 @@
 								<img src="images/tinman.jpg" alt="Tin Man">
 							</div>
 						</div>
+						<!-- adding character here -->
+						<div class="friend">
+							<h3>Wicked Witch</h3>
+							<div>
+								<img src="images/west.jpg" alt="Wicked Witch">
+							</div>
+						</div>
+						
 					</div>
 				</section>
 			</div>
