Added Cowardly to alt of lion img

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 						<div class="friend">
 							<h3>Cowardly Lion</h3>
 							<div>
-								<img src="images/lion.jpg" alt="Lion">
+								<img src="images/lion.jpg" alt="Cowardly Lion">
 							</div>
 						</div>
 						<div class="friend">
