Shortend Horses Name

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 							</div>
 						</div>
 						<div class="friend">
-							<h3>Horse of a Different Color</h3>
+							<h3>Horse</h3>
 							<div>
 								<img src="images/Horse-of-a-diffferent-color.jpg" alt="Horse of a different Color">
 							</div>
