added wicked witch

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 								<img src="images/tinman.jpg" alt="Tin Man">
 							</div>
 						</div>
-						<!-- adding character here -->
+						<!-- added character here -->
 						<div class="friend">
 							<h3>Wicked Witch</h3>
 							<div>
