added shaggy man to the characters

--- a/index.html
+++ b/index.html
@@ -60,6 +60,12 @@
 							<div>
 								<img src="images/tinman.jpg" alt="Tin Man">
 							</div>
+						<div class="friend">
+							<h3>Shaggy Man</h3>
+							<div>
+								<img src="images/shaggyman.jpg" alt="Shaggy Man">
+							</div>
+						</div>
 						</div>
 					</div>
 				</section>
