I added memes to a somewhat serious webpage

--- a/index.html
+++ b/index.html
@@ -81,6 +81,13 @@
 							</div>
 						</div>
 					</div>
+					<div class="friend">
+						<h3>loooool</h3>
+						<div>
+							<img src="images/Willy-Wonka-remake-700x300.jpg" alt="Willy Wonka a chocalateer">
+						</div>
+					</div>
+				</div>
 				</section>
 			</div>
 
