edited html added Auntie Em

--- a/index.html
+++ b/index.html
@@ -60,6 +60,11 @@
 							<div>
 								<img src="images/tinman.jpg" alt="Tin Man">
 							</div>
+							<div class="friend">
+								<h3>Auntie Em</h3>
+								<div>
+									<img src="images/Auntie Em.jpg" alt="Tin Man">
+								</div>
 						</div>
 					</div>
 				</section>
