--- a/index.html
+++ b/index.html
@@ -63,9 +63,9 @@
 						</div>
 						<!-- added character here -->
 						<div class="friend">
-							<h3>Wicked Witch</h3>
+							<h3>The Munchkins</h3>
 							<div>
-								<img src ="images/west.jpg" alt="Wicked Witch">
+								<img src ="images/munchkins.jpg" alt="Witch Of The South">
 							</div>
 						</div>
 						
