added most important character to html and images

--- a/index.html
+++ b/index.html
@@ -61,6 +61,12 @@
 								<img src="images/tinman.jpg" alt="Tin Man">
 							</div>
 						</div>
+						<div class="friend">
+							<h3>Michael Cera</h3>
+							<div>
+								<img src="images/michael cera.jpg" alt="Michael Cera">
+							</div>
+						</div>
 					</div>
 				</section>
 			</div>
