Added alt message to Aunt Em image

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 						<div class="friend">
 							<h3>Aunt Em</h3>
 							<div>
-								<img src="images/Aunt-Em.jpg">
+								<img src="images/Aunt-Em.jpg" alt="Dorothy's Aunt Em">
 							</div>
 						</div>
 					</div>
