added winkie guard

--- a/index.html
+++ b/index.html
@@ -43,6 +43,12 @@
 								<img src="images/dorothy.jpg" alt="Dorothy">
 							</div>
 						</div>
+						<div class ="friend">
+							<h3>Winkie Guard</h3>
+							<div>
+								<img src="images/Winkie Guard.jpg">
+							</div>
+						</div>
 						<div class="friend">
 							<h3>Cowardly Lion</h3>
 							<div>
