adjusted css to fix shaggy man image layout issue

--- a/index.html
+++ b/index.html
@@ -55,16 +55,17 @@
 								<img src="images/scarecrow.jpg" alt="Scarecrow">
 							</div>
 						</div>
+						<div class="shaggy">
+							<h3>Shaggy Man</h3>
+							<div>
+								<img src="images/shaggyman.jpg" alt="Shaggy Man">
+							</div>
 						<div class="friend">
 							<h3>Tin Man</h3>
 							<div>
 								<img src="images/tinman.jpg" alt="Tin Man">
 							</div>
-						<div class="friend">
-							<h3>Shaggy Man</h3>
-							<div>
-								<img src="images/shaggyman.jpg" alt="Shaggy Man">
-							</div>
+						
 						</div>
 						
 					</div>
