--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 							<h3>Tin Man</h3>
 							<div>
 								<img src="images/tinman.jpg" alt="Tin Man">
-							
+							</div>
 						</div>
 						<div class="friend">
 							<h3>Wizard</h3>
