--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 				<article>
 					<h4>'The Wizard of Oz’ Remake: It’s Hard to Follow the Famous Yellow Brick Road</h4>
 					<p>L. Frank Baum’s beloved children’s book “The Wonderful Wizard of Oz” has been adapted in various forms over the years, but at this point we have no idea what version to expect from director Nicole Kassell.</p>
-					<p></p>
+					<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit omnis tempora repudiandae sunt facere deserunt dolorum, consequuntur rem dignissimos cumque iure laborum repellat ullam unde illo aut tempore perspiciatis blanditiis.</p>
 				</article>
 				<article>
 					<h4>The Ruby Slippers</h4>
